# era-compiler-llvm-context

./: .gitignore  .gitignore.bak  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  dependencies.yaml  dependencies_check.yaml  license-secrets-check.yaml
src/: const.rs  debug_info.rs  dependency.rs  evm_version.rs  lib.rs  metadata_hash.rs  target_machine.rs  utils.rs
src/context/: address_space.rs  attribute.rs  block_key.rs  build.rs  code_type.rs  evmla_data.rs  global.rs  loop.rs  mod.rs  pointer.rs  target_machine.rs  tests.rs  value.rs  vyper_data.rs
src/context/attribute/: memory.rs  mod.rs
src/context/function/: evmla_data.rs  intrinsics.rs  llvm_runtime.rs  mod.rs  return.rs
src/context/function/block/: evmla_data.rs  key.rs  mod.rs
src/context/optimizer/: mod.rs
src/context/traits/: address_space.rs  evmla_data.rs  evmla_function.rs  mod.rs  solidity_data.rs  yul_data.rs
src/debug_config/: ir_type.rs  mod.rs
src/eravm/: build.rs  const.rs  metadata_hash.rs  mod.rs  utils.rs
src/eravm/context/: address_space.rs  argument.rs  attribute.rs  build.rs  debug_info.rs  evmla_data.rs  global.rs  mod.rs  pointer.rs  solidity_data.rs  tests.rs  vyper_data.rs  yul_data.rs
src/eravm/evm/: arithmetic.rs  bitwise.rs  call.rs  calldata.rs  comparison.rs  context.rs  create.rs  crypto.rs  ether_gas.rs  event.rs  ext_code.rs  immutable.rs  math.rs  memory.rs  mod.rs  return.rs  return_data.rs  storage.rs
src/eravm/extensions/: abi.rs  call.rs  const_array.rs  general.rs  math.rs  mod.rs
src/evm/: arithmetic.rs  attribute.rs  bitwise.rs  build.rs  call.rs  calldata.rs  comparison.rs  const.rs  context.rs  create.rs  ether_gas.rs  event.rs  ext_code.rs  immutable.rs  math.rs  memory.rs  metadata_hash.rs  mod.rs  return.rs  return_data.rs  storage.rs  utils.rs  warning.rs
src/evm/context/: address_space.rs  build.rs  debug_info.rs  evmla_data.rs  mod.rs  pointer.rs  solidity_data.rs  yul_data.rs
src/evm/instructions/: arithmetic.rs  bitwise.rs  call.rs  calldata.rs  code.rs  comparison.rs  context.rs  create.rs  ether_gas.rs  event.rs  immutable.rs  math.rs  memory.rs  mod.rs  return.rs  return_data.rs  storage.rs
src/evm/profiler/: mod.rs  run.rs
src/optimizer/: mod.rs
src/optimizer/settings/: mod.rs  size_level.rs
src/target_machine/: mod.rs  target.rs
src/zkevm/: abi.rs  call.rs  general.rs  math.rs  mod.rs
(+40 files in other folders)
