[package]
name = "era-compiler-llvm-context"
version = "2.0.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Shared front-end code of LLVM-based compilers"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
semver = "1.0"
serde = { version = "1.0", "features" = [ "derive" ] }
num = "0.4"
itertools = "0.14"

zkevm_opcode_defs = "=0.150.6"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-17"
default-features = false
features = ["llvm17-0", "no-libffi-linking", "target-eravm", "target-evm"]
